Avoid issues with variable height viewport on iOS

--- a/assets/styles/claris/_components_screen.sass
+++ b/assets/styles/claris/_components_screen.sass
@@ -545,7 +545,7 @@
       flex-direction: column
       justify-content: flex-end
       min-height: 100vh
-      min-height: 100lvh
+      min-height: 100svh
       padding-bottom: $screenViewInnerPaddingOneColumn
       z-index: ($main-z-index + 2)
     .content-title
@@ -588,7 +588,7 @@
       &_main
         .main_inner
           min-height: 100vh
-          min-height: 100lvh
+          min-height: 100svh
           padding-top: 3rem
           margin: -3rem auto -100vh auto
           margin-bottom: -100lvh
